overflow fixed.

--- a/style.css
+++ b/style.css
@@ -218,10 +218,9 @@ main {
 
 @media (max-width: 736px) {
   .details {
-    padding-inline: 1.5em;
-
     .details-para {
       width: 100%;
+      padding-inline: 0.5em;
     }
   }
 }
